--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,12 +1,23 @@
+.bg {
+  z-index: -1;
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  background-image: url('https://thumbs.gfycat.com/SeparateSameAmurratsnake-size_restricted.gif');
+  background-repeat: no-repeat no-repeat;
+  background-size: cover;
+}
+
+.cardsContainer {
+  display: fixed;
+}
+
 .cards{
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-image: url('https://thumbs.gfycat.com/SeparateSameAmurratsnake-size_restricted.gif');
-  background-repeat: no-repeat no-repeat;
-  background-size: cover;
 }
 
 .title a {
@@ -58,7 +69,7 @@
   padding: 2rem;
   text-align: center;
   color: lightgrey;
-  background: rgba(23, 44, 60, 0.6);
+  background: rgba(23, 44, 60, 0.7);
   font-weight: bold;
   font-size: 2rem;
   text-decoration: none;
